# cwc-waterlevel-forecast-xgboost

./: .gitignore  20_hours_predicting_final.ipynb  Chatia_test.xlsx  Chatia_train.xlsx  Dumariaghat_data.xlsx  LSTM_seq-to-vector_multistep.ipynb.ipynb  LSTMseq-to-vec.ipynb  LSTMseq-toseq.ipynb  README.md  Rewaghat_test.xlsx  Rewaghat_train.xlsx  best_lstm_comparison_model.pth  best_lstm_seq2seq_model.pth  best_true_seq2seq_model.pth  best_xgb_params_20hr.pkl  feature_engineering.py  main.py  pyproject.toml  rainfall_data.xlsx  testing_only.ipynb
